Fix build of textureprovider example with -opengl dynamic

Do not link to OpenGL calls directly. Instead, use QOpenGLFunctions.

Task-number: QTBUG-53841
Change-Id: Ic87bb78fede1ee9f75b81247406ad858b2bf7342
Reviewed-by: Laszlo Agocs <laszlo.agocs@theqtcompany.com>